[project]
name = "regex-agent-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.4.10",
    "openai",
    "pydantic-ai>=0.3.4",
]

[tool.poetry]
name = "regex-agent-mvp"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "^2.7.1"
langgraph = "^0.0.30"
openai = "^1.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
