[project]
name = "regex-agent-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "grandalf",
    "langgraph>=0.4.10",
    "openai>=1.30.1",
    "pydantic>=2.7.1",
    "pydantic-ai>=0.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
